@startuml 装饰器模式
title 装饰器模式

' ==== 饮料
abstract class Beverage {
    + {abstract} GetDescription(): string
    + {abstract} Cost(): decimal
}

class HouseBlend extends Beverage {}

class DarkRoast extends Beverage {}

' ==== 装饰
abstract class CondimentDecorator extends Beverage {
    - beverage: Beverage
    + CondimentDecorator(beverage: Beverage)
}

' 调料
class SteamedMilk extends CondimentDecorator {}
class Mocha extends CondimentDecorator {}
class Soy extends CondimentDecorator {}
class Whip extends CondimentDecorator {}

' 容量
class Venti extends CondimentDecorator {}
class Grande extends CondimentDecorator {}
class Tall extends CondimentDecorator {}

' ==== 构建类
class BeverageBuilder {
    - beverage: Beverage
    - size: SizeType
    - seasoningTypes: List<SeasoningType>
    + SetBaseBeverage(beverage: Beverage): void
    + SetSize(size: SizeType): void
    + AddSeasoning(seasoningType: SeasoningType): void
    + GetBeverage(): Beverage
}

' ==== 枚举
enum SizeType {
    Tall
    Grande
    Venti
}
enum SeasoningType {
    SteamedMilk
    Mocha
    Soy
    Whip
}

' ==== 关系
CondimentDecorator o-- Beverage
BeverageBuilder ..> Beverage
BeverageBuilder ..> CondimentDecorator
BeverageBuilder ..> SizeType
BeverageBuilder ..> SeasoningType

@enduml